# 6.824-MapReduce

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  test-mr.sh
app-crash/: Cargo.toml
app-crash/src/: lib.rs
app-early-exit/: Cargo.toml
app-early-exit/src/: lib.rs
app-indexer/: Cargo.toml
app-indexer/src/: lib.rs
app-jobcount/: Cargo.toml
app-jobcount/src/: lib.rs
app-wc/: Cargo.toml
app-wc/src/: lib.rs
common/: Cargo.toml
common/examples/: load.rs
common/src/: lib.rs
distributed/: Cargo.toml
distributed/proto/: service.proto
distributed/src/: lib.rs  queue.rs
sequential/: Cargo.toml
sequential/src/: main.rs
