[package]
name = "distributed"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
crossbeam-queue = "0.3.2"
dashmap = "4.0.2"
env_logger = "0.9.0"
eyre = "0.6.5"
futures = "0.3.16"
itertools = "0.10.1"
log = "0.4.14"
prost = "0.8.0"
structopt = "0.3.22"
tokio = { version = "1.9.0", features = ["full"] }
tonic = "0.5.0"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.5.1"
